--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 .body {
   font-family: "Arial", sans-serif;
-  background-color: #3498db;
-  color: #fff;
-  text-align: center;
   margin: 30px;
+  text-align: center;
+  background: radial-gradient(
+    circle at 4.3% 10.7%,
+    rgb(138, 118, 249) 13.6%,
+    rgb(75, 252, 235) 100.7%
+  )
 }
 
 .weather_container {
@@ -17,7 +20,7 @@
 
 .city_name {
   font-size: 2em;
-  margin-bottom: 20px;
+  margin-bottom: 2px;
   color: #2c3e50;
 }
 
@@ -46,19 +49,19 @@
 .forecast_day {
   flex: 1;
   padding: 15px;
-  background-color: #3498db;
+  background-color: #93e9f5;
   border-radius: 10px;
 }
 
 .day_name {
   font-size: 1.5em;
   margin-bottom: 10px;
-  color: #fff;
+  color: #180202;
 }
 
 .temp_range {
   font-size: 1.2em;
-  color: #fff;
+  color: #300404;
 }
 
 .forecast_day img {
@@ -75,7 +78,7 @@
 .detail_item {
   flex: 1;
   padding: 15px;
-  background-color: #3498db;
+  background-color: #e1ec40;
   border-radius: 10px;
   margin-bottom: 20px;
 }
@@ -83,13 +86,46 @@
 .detail_name {
   font-size: 1.2em;
   margin-bottom: 10px;
-  color: #fff;
+  color: #000000;
 }
 
 .detail_value {
   font-size: 1.5em;
-  color: #fff;
+  color: #000000;
 }
+
+.search_container {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.locationInput {
+    width: calc(100% - 40px);
+    padding: 10px;
+    margin-bottom: 0;
+    font-size: 1em;
+    border: 1px solid #4eb9e4;
+    border-radius: 5px;
+    box-sizing: border-box;
+  }
+
+  .searchButton {
+    border: none;
+    border-radius: 10px;
+    padding: 10px 15px;
+    background-color: #b8b0e0;
+    box-shadow: 2px 2px 5px #3f193f36;
+    transition: all 0.5s ease;
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    vertical-align: bottom;
+  }
+
+  .searchButton:hover {
+    background-color: #3732a1d0;
+    color: #fff;
+  }
 
 @media (max-width: 600px) {
   .weather_container {
@@ -103,5 +139,9 @@
   .forecast_day,
   .detail_item {
     margin-bottom: 15px;
+  }
+
+  #locationInput {
+    margin-bottom: 10px;
   }
 }
